# kharma

./: Dockerfile  README.md  hall_of_fame.md  pyproject.toml
.github/workflows/: tests.yml
grammars/common/: common.kg
grammars/images/: ppm.kg
grammars/json/: json.kg
grammars/tutorial/: README.md  import.kg  tutorial.kg
kharma/: __init__.py  main.py
kharma/app/: __init__.py  _handlers.py
kharma/app/utils/: arguments.py  config.py  exceptions.py  numeric.py  objects.py  output.py  parser.py  regexer.py
scripts/: autoinstall.sh  checks.sh  docker_install.sh  install.sh
tests/: test_kharma.py
tests/test_templates/: test_import.kg  test_template.kg
